--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "dockerode": "^3.2.1",
         "dockerode-utils": "0.0.7",
         "express": "^4.17.1",
-        "express-openapi": "^5.0.0",
+        "express-openapi": "^11.1.0",
         "express-openapi-validator": "^5.0.0",
         "fetch": "^1.1.0",
         "form-data": "^2.3.3",
@@ -63,6 +63,7 @@
         "graphql-tag": "^2.11.0",
         "graphql-ws": "^5.11.2",
         "js-yaml": "^3.13.1",
+        "jsonwebtoken": "^9.0.2",
         "node-localstorage": "^2.2.1",
         "nodemon-webpack-plugin": "^4.3.2",
         "react-dom": "^18.2.0",
