feat: Add GET endpoint for retrieving Tapis job status
- Implement GET method for job status retrieval
- Add new Tapis job get method in jobsService
- Create new get.ts class for Tapis job API interaction
- Update .env.sample with Tapis base path configuration
- Add OpenAPI documentation for the new GET endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ VERSION=v1
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
+
+# Tapis Configuration
+TAPIS_BASE_PATH=https://portals.tapis.io
