--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "lib": ["dom", "esnext"],
 
         "paths": {
-            "*": ["node_modules/*"]
+            "*": ["node_modules/*"],
+            "@/*": ["src/*"]
         }
     },
     "include": ["src/typings/**/*.d.ts", "src/**/*.ts", "paths"],
