--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,6 +21,8 @@ jobs:
     build:
         runs-on: ubuntu-latest
         if: github.event_name == 'push'
+        outputs:
+            docker_tag: ${{ steps.exposeValue.outputs.docker_tag }}
         steps:
             - name: Get branch name
               id: branch-name
@@ -49,21 +51,53 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push Docker image
+            - name: Build and push Docker image (AMD64)
               uses: docker/build-push-action@v3.0.0
               with:
                   push: true
                   context: .
                   tags: ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.branch-name.outputs.current_branch }}, ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
                   file: ${{ env.DOCKER_FILE}}
-                  platforms: linux/amd64, linux/arm64
+                  platforms: linux/amd64
+
+    build-arm:
+        runs-on: ubuntu-latest
+        if: github.event_name == 'push'
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Create environment variable with the commit id
+              run: |
+                  echo "DOCKER_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v2
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
+
+            - name: Login to DockerHub
+              uses: docker/login-action@v1
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Build and push Docker image (ARM64)
+              uses: docker/build-push-action@v3.0.0
+              with:
+                  push: true
+                  context: .
+                  tags: ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}-arm64:${{ steps.branch-name.outputs.current_branch }}, ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}-arm64:${{ env.DOCKER_TAG }}
+                  file: ${{ env.DOCKER_FILE}}
+                  platforms: linux/arm64
+
     security:
         permissions:
             contents: read
             security-events: write
             packages: write
         name: "Scan vulnerabilities in the image"
-        needs: [build]
+        needs: [build, build-arm]
         runs-on: ubuntu-latest
         steps:
             - name: Run Trivy vulnerability scanner
