--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "@types/jest": "^29.5.12",
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.12.7",
+        "@types/nodemon": "^1.19.6",
         "@types/swagger-ui-express": "^4.1.1",
         "@types/yauzl": "^2.9.1",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
