--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.12.7",
         "@types/nodemon": "^1.19.6",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.1",
         "@types/yauzl": "^2.9.1",
@@ -108,6 +109,7 @@
         "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
         "prettier": "^3.2.5",
+        "supertest": "^7.1.1",
         "ts-jest": "^29.1.4",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
