feat: refactor Tapis API routes and update package dependencies
- Introduced a new structure for Tapis API routes, consolidating execution-related endpoints under a unified path.
- Removed deprecated job-related endpoints and updated the jobs service to use the latest Tapis TypeScript package.
- Enhanced Swagger documentation for improved API clarity and usability.
- Updated package.json to include the latest version of @tapis/tapis-typescript, ensuring compatibility with the new API structure.

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "@bull-board/api": "^4.6.4",
         "@bull-board/express": "^4.6.4",
         "@kubernetes/client-node": "^0.21.0",
-        "@mfosorio/tapis-typescript": "0.0.30",
         "@mintproject/modelcatalog_client": "^8.0.0",
+        "@tapis/tapis-typescript": "^0.0.55",
         "@types/fs-extra": "^8.0.1",
         "@types/request": "^2.48.3",
         "@types/request-promise-native": "^1.0.17",
