--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "4.1.0",
     "description": "",
     "scripts": {
-        "start": "ts-node -r node-localstorage/register ./dist/server.js",
+        "start": "npm run build && node ./dist/server.js",
         "start:watch": "nodemon ./dist/server.js",
         "build": "npx webpack",
         "test": "ENSEMBLE_MANAGER_CONFIG_FILE=src/config/config.json  jest",
@@ -39,8 +39,8 @@
         "@bull-board/api": "^4.6.4",
         "@bull-board/express": "^4.6.4",
         "@kubernetes/client-node": "^0.21.0",
-        "@mfosorio/tapis-typescript": "0.0.30",
         "@mintproject/modelcatalog_client": "^8.0.0",
+        "@tapis/tapis-typescript": "^0.0.55",
         "@types/fs-extra": "^8.0.1",
         "@types/request": "^2.48.3",
         "@types/request-promise-native": "^1.0.17",
@@ -54,8 +54,6 @@
         "dockerode": "^3.2.1",
         "dockerode-utils": "0.0.7",
         "express": "^4.17.1",
-        "express-openapi": "^11.1.0",
-        "express-openapi-validator": "^5.0.0",
         "fetch": "^1.1.0",
         "form-data": "^2.3.3",
         "fs-extra": "^8.1.0",
@@ -69,6 +67,7 @@
         "react-dom": "^18.2.0",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.8",
+        "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^4.1.3",
         "ts-loader": "^9.4.1",
         "tsconfig-paths": "^4.1.0",
@@ -88,11 +87,12 @@
         "@types/cors": "^2.8.6",
         "@types/dockerode": "^2.5.34",
         "@types/express": "^4.17.2",
-        "@types/express-openapi": "^1.9.0",
         "@types/jest": "^29.5.12",
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.12.7",
         "@types/nodemon": "^1.19.6",
+        "@types/supertest": "^6.0.3",
+        "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.1",
         "@types/yauzl": "^2.9.1",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -109,6 +109,7 @@
         "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
         "prettier": "^3.2.5",
+        "supertest": "^7.1.1",
         "ts-jest": "^29.1.4",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
