feat: enhance problem statements API with subtask model management
- Added a new endpoint to the problem statements API for adding models to subtasks, improving task management capabilities.
- Introduced a SubtaskSchema in the API documentation to define the structure of subtask creation requests.
- Updated the subtasks router to handle model addition, enhancing the functionality of the subtasks API.
- Improved error handling in the subtasks service to manage authorization and not found scenarios effectively.

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -13,7 +13,7 @@
         "access_key": "CHANGEME",
         "secret_access_key": "CHANGEME"
     },
-    "model_catalog_api": "https://api.models.mint.local/v1.8.0",
+    "model_catalog_api": "http://api.models.mint.local/v1.8.0",
 
     "ensemble_manager_api": "http://localhost:3000/v1",
     "graphql": {
