Revert changes back to 04cf6c7

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,7 @@
 
         "paths": {
             "*": ["node_modules/*"],
-            "@/api/*": ["src/api/*"],
-            "@/classes/*": ["src/classes/*"],
-            "@/config/*": ["src/config/*"],
-            "@/utils/*": ["src/utils/*"],
-            "@/interfaces/*": ["src/interfaces/*"]
+            "@/*": ["src/*"]
         }
     },
     "include": ["src/typings/**/*.d.ts", "src/**/*.ts", "paths"],
