--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "fetch": "^1.1.0",
         "form-data": "^2.3.3",
         "fs-extra": "^8.1.0",
+        "fuse.js": "^7.1.0",
         "graphql": "^15.3.0",
         "graphql-tag": "^2.11.0",
         "graphql-ws": "^5.11.2",
