feat: integrate OpenAPI validation and enhance Swagger documentation
- Added express-openapi-validator middleware to validate API requests and responses against the OpenAPI specification.
- Updated server setup to generate and serve Swagger documentation dynamically from the API specifications.
- Improved error handling and streamlined the server code for better maintainability and clarity.
- Enhanced overall API structure to support robust validation and documentation practices.

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "dockerode": "^3.2.1",
         "dockerode-utils": "0.0.7",
         "express": "^4.17.1",
+        "express-openapi-validator": "^5.5.7",
         "fetch": "^1.1.0",
         "form-data": "^2.3.3",
         "fs-extra": "^8.1.0",
