--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint-staged": "lint-staged",
         "eslint:fix": "eslint --quiet --fix",
         "prettier:fix": "prettier --write --ignore-unknown",
-        "prepare": "husky && husky install"
+        "prepare": "husky && husky install",
+        "codegen": "graphql-codegen"
     },
     "nodemonConfig": {
         "ignore": [
@@ -59,7 +60,6 @@
         "form-data": "^2.3.3",
         "fs-extra": "^8.1.0",
         "fuse.js": "^7.1.0",
-        "graphql": "^15.3.0",
         "graphql-tag": "^2.11.0",
         "graphql-ws": "^5.11.2",
         "js-yaml": "^3.13.1",
@@ -82,7 +82,10 @@
         "@babel/preset-env": "^7.24.7",
         "@babel/preset-flow": "^7.24.7",
         "@babel/preset-typescript": "^7.24.7",
+        "@graphql-codegen/cli": "^5.0.7",
+        "@graphql-codegen/client-preset": "^4.8.2",
         "@graphql-tools/jest-transform": "^2.0.0",
+        "@graphql-typed-document-node/core": "^3.2.0",
         "@types/body-parser": "^1.17.1",
         "@types/bull": "^3.14.0",
         "@types/cookie-parser": "^1.4.2",
@@ -106,6 +109,7 @@
         "eslint": "^8.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.18.2",
+        "graphql": "^15.10.1",
         "husky": "^8.0.0",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
@@ -115,7 +119,7 @@
         "ts-jest": "^29.1.4",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.3",
+        "typescript": "^4.9.5",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.0",
         "webpack-node-externals": "^3.0.0"
